# sliding_tile_attention_rocm

./: .gitmodules  README.md  pyproject.toml
attn/benchmarks/: bench_sta_flex.py  bench_sta_triton.py
attn/sliding_tile_attn/st_attn/: st_attn_h100.cu
attn/tests/: test_sta_triton.py
attn/triton/: sta_triton.py
benchmarks/: bench_sta_triton.py
sta_rocm/triton/: sta_triton.py
tests/: test_sta_triton.py
