[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sta_rocm"
version = "0.1.0"
description = "sliding_tile_attention_rocm"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    # Core Libraries
    "torch",
    "torchvision",
    "einops",
    "tqdm",

    # Kernel & Packaging
    "wheel",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "benchmarks.*",
    "tests.*",
    "sliding_tile_attn.*",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=4.0.0",
    "gpustat>=1.1.1",
]
test = [
    "pytest>=7.0.0",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 120
target-version = ["py310", "py311"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
ignore = ["E501", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
indent-width = 4

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_calls = true
check_untyped_defs = true
follow_imports = "silent"